[package]
name = "rust-microservices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "data"
path = "src/lib.rs"

[[bin]]
name = "actix"
path = "src/bin/actix.rs"

[[bin]]
name = "warp"
path = "src/bin/warp.rs"

[[bin]]
name = "tide"
path = "src/bin/tide.rs"

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
actix-web = "4"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tide = "0.16.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
